--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -276,6 +276,7 @@
             <a href="#undoing-action" class="toc-link block text-xs text-slate-500 hover:text-blue-600 transition-colors">1.1 The &#34;Undoing&#34; Action</a>
             <a href="#input-output-relationship" class="toc-link block text-xs text-slate-500 hover:text-blue-600 transition-colors">1.2 Input-Output Relationship</a>
             <a href="#one-to-one-functions" class="toc-link block text-xs text-slate-500 hover:text-blue-600 transition-colors">1.3 One-to-One Functions</a>
+            <a href="#onto-functions" class="toc-link block text-xs text-slate-500 hover:text-blue-600 transition-colors">1.3 Onto Functions</a>
           </div>
           <a href="#algebraic-techniques" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">2. Algebraic Techniques</a>
           <div class="ml-4 space-y-2">
