--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
 
     <style>
-        .font-canela { font-family: 'Canela', serif; }
+        .font-canela { font-family: 'Canela', source-serif-4; }
         .font-inter { font-family: 'Inter', sans-serif; }
         
         :root {
