--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -7,9 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Google Fonts -->
+   
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
-    <link href="https://fonts.googleapis.com/css2?family=Canela:wght@300;400;700&amp;family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -18,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
 
     <style>
+        .font-family { 'Libre Baskerville', serif;}
         .font-inter { font-family: 'Inter', sans-serif; }
         
         :root {
@@ -267,7 +269,7 @@
     <!-- Fixed Table of Contents -->
     <div id="toc-container" class="fixed left-0 top-0 h-screen w-80 bg-white shadow-2xl z-50 overflow-y-auto border-r border-gray-200 transform -translate-x-full md:translate-x-0 md:block transition-transform duration-300">
       <div class="p-6">
-        <h3 class="font-canela font-bold text-lg text-slate-900 mb-6">Contents</h3>
+        <h3 class="font-Libre Baskerville font-bold text-lg text-slate-900 mb-6">Contents</h3>
         <nav class="space-y-3">
           <a href="#introduction" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">Introduction</a>
           <a href="#core-concept" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">1. Core Concept</a>
@@ -305,7 +307,7 @@
           <div class="grid grid-cols-1 md:grid-cols-12 gap-8 items-center">
             <!-- Title Section -->
             <div class="col-span-1 md:col-span-8 text-left">
-              <h1 class="font-canela text-4xl sm:text-5xl md:text-6xl font-light text-white leading-tight mb-6">
+              <h1 class="font-Libre Baskerville text-4xl sm:text-5xl md:text-6xl font-light text-white leading-tight mb-6">
                 <em class="block text-2xl sm:text-3xl md:text-4xl font-light opacity-80 mb-2">V. Aashis</em>
                 Understanding Inverse Functions
               </h1>
@@ -341,7 +343,7 @@
         <!-- Section 1: Core Concept -->
         <section id="core-concept" class="space-y-12">
           <div class="text-center mb-16">
-            <h2 class="font-canela text-4xl font-bold text-slate-900 mb-4">The Core Concept</h2>
+            <h2 class="font-Libre Baskerville text-4xl font-bold text-slate-900 mb-4">The Core Concept</h2>
             <p class="text-xl text-slate-600 max-w-3xl mx-auto leading-relaxed">
               Understanding what inverse functions truly represent in mathematics.
             </p>
