--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -269,7 +269,7 @@
     <!-- Fixed Table of Contents -->
     <div id="toc-container" class="fixed left-0 top-0 h-screen w-80 bg-white shadow-2xl z-50 overflow-y-auto border-r border-gray-200 transform -translate-x-full md:translate-x-0 md:block transition-transform duration-300">
       <div class="p-6">
-        <h3 class="font-Libre Baskerville font-bold text-lg text-slate-900 mb-6">Contents</h3>
+        <h3 class="font-Libre+Baskerville font-bold text-lg text-slate-900 mb-6">Contents</h3>
         <nav class="space-y-3">
           <a href="#introduction" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">Introduction</a>
           <a href="#core-concept" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">1. Core Concept</a>
