--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -269,7 +269,7 @@
     <!-- Fixed Table of Contents -->
     <div id="toc-container" class="fixed left-0 top-0 h-screen w-80 bg-white shadow-2xl z-50 overflow-y-auto border-r border-gray-200 transform -translate-x-full md:translate-x-0 md:block transition-transform duration-300">
       <div class="p-6">
-        <h3 class="font-Libre+Baskerville font-bold text-lg text-slate-900 mb-6">Contents</h3>
+        <h3 class="font-LibreBaskerville font-bold text-lg text-slate-900 mb-6">Contents</h3>
         <nav class="space-y-3">
           <a href="#introduction" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">Introduction</a>
           <a href="#core-concept" class="toc-link block text-sm text-slate-600 hover:text-blue-600 transition-colors">1. Core Concept</a>
@@ -350,7 +350,7 @@
           </div>
 
           <div id="undoing-action" class="bg-white rounded-2xl shadow-elevated p-8 hover-lift">
-            <h3 class="font-canela text-2xl font-semibold text-slate-900 mb-6 flex items-center">
+            <h3 class="font-LibreBaskerville text-2xl font-semibold text-slate-900 mb-6 flex items-center">
               <i class="fas fa-undo text-blue-600 mr-3"></i>
               The &#34;Undoing&#34; Action
             </h3>
@@ -394,7 +394,7 @@
           </div>
 
           <div id="input-output-relationship" class="bg-white rounded-2xl shadow-elevated p-8 hover-lift">
-            <h3 class="font-canela text-2xl font-semibold text-slate-900 mb-6 flex items-center">
+            <h3 class="font-LibreBaskerville text-2xl font-semibold text-slate-900 mb-6 flex items-center">
               <i class="fas fa-exchange-alt text-green-600 mr-3"></i>
               Input-Output Relationship
             </h3>
@@ -424,7 +424,7 @@
           </div>
 
           <div id="one-to-one-functions" class="bg-white rounded-2xl shadow-elevated p-8 hover-lift">
-            <h3 class="font-canela text-2xl font-semibold text-slate-900 mb-6 flex items-center">
+            <h3 class="font-LibreBaskerville text-2xl font-semibold text-slate-900 mb-6 flex items-center">
               <i class="fas fa-check-circle text-red-600 mr-3"></i>
               The Prerequisite: One-to-One Functions
             </h3>
@@ -468,7 +468,7 @@
 
 
 <div id="onto-functions" class="bg-white rounded-2xl shadow-elevated p-8 hover-lift">
-  <h3 class="font-canela text-2xl font-semibold text-slate-900 mb-6 flex items-center">
+  <h3 class="font-LibreBaskerville text-2xl font-semibold text-slate-900 mb-6 flex items-center">
     <i class="fas fa-arrows-alt text-blue-600 mr-3"></i>
     The Partner Requirement: Onto (Surjective) Functions
   </h3>
