--- a/inverse-function/index.html
+++ b/inverse-function/index.html
@@ -517,7 +517,7 @@
         <!-- Section 2: Algebraic Techniques -->
         <section id="algebraic-techniques" class="space-y-12">
           <div class="text-center mb-16">
-            <h2 class="font-canela text-4xl font-bold text-slate-900 mb-4">Algebraic Techniques</h2>
+            <h2 class="font-Libre_Baskerville text-4xl font-bold text-slate-900 mb-4">Algebraic Techniques</h2>
             <p class="text-xl text-slate-600 max-w-3xl mx-auto leading-relaxed">
               Master the systematic process of finding inverse functions through algebraic manipulation
             </p>
